# msc-2048-ai

./: .gitignore  2  Cargo.toml  Notes.md  Profiling.md  README.md  data.txt  moves.csv:Zone.Identifier  netlify.toml  strategy5.txt  test.txt
banana/: 1000_runs.csv  100_runs.csv  10_runs.csv
benches/: my_benchmark.rs
data/: force.txt  plot_median_info.ipynb  small.txt  strategy.txt  strategy2.txt  strategy3.txt  strategy4.txt
data/.ipynb_checkpoints/: plot_median_info-checkpoint.ipynb
pkg/: README.md  msc_2048_ai.d.ts  msc_2048_ai.js  msc_2048_ai_bg.d.ts  msc_2048_ai_bg.wasm  package.json
sapper_test/: .prettierrc  package-lock.json  package.json
sapper_test/src/components/: 2048.svelte  Nav.svelte  consent.svelte  rule.svelte
sapper_test/src/js/: game_manager.js  grid.js  keyboard_input_manager.js  local_storage_manager.js  tile.js
sapper_test/src/routes/: 2048.svelte  _layout.svelte  index.svelte  tutorial.svelte
sapper_test/static/: 2048.css  index.css  tailwind.css
src/: ai.rs  engine.rs  engine_unsafe.rs  evaluate_strategies.rs  game.rs  lib.rs  main.rs  mann_whitney.rs  ui.rs  wasm.rs
src/ai/: default.rs  expectimax.rs  expectimax_old.rs  mod.rs  random.rs  sequence.rs  snake.rs
src/ai/snake/: attributes.rs  ban_rules.rs  evaluate_strategies.rs  generate_strategies.rs  mann_whitney.rs  mod.rs  rules.rs  run_strategies.rs  try_rules.rs
src/ai/strategy/: attributes.rs  mod.rs  (+4 more)
src/engine/: basic.rs  initial.rs  mod.rs  optimised.rs
www/: index.css  index.html  index.js  package-lock.json  package.json
www/static/: 2048.css  index.css
(+27 files in other folders)
