[package]
name = "msc-2048-ai"
version = "0.1.0"
authors = ["Matthew Kennedy <kennedymj97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7"
termion="*"
bitintr="0.3"

[dev-dependencies]
criterion="0.3"

[[bench]]
name = "my_benchmark"
harness = false

# Enable the below when profiling
[profile.release]
debug = true

