[package]
name = "msc-2048-ai"
version = "0.1.0"
authors = ["Matthew Kennedy <kennedymj97@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
bitintr = "0.3"
wasm-bindgen = "0.2"
permutohedron = "0.2.4"
statrs = "0.7.0"
num-bigint = "0.3.0"
#termion="*"

[dev-dependencies]
criterion="0.3"

[[bench]]
name = "my_benchmark"
harness = false

# Enable the below when profiling
#[profile.release]
#debug = true

